--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ Schrijf je nu in voor de laatste cursus Pilates van dit seizoen. (12 mei t/m 23 
 Na de zomer starten we weer met een nieuwe cursus. </p>
 </section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
 <p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
-Onze leerlingen dansen <strong>zaterdag 14 juni</strong> in de grote leerlingen voorstelling in het Musis in Arnhem. 
-We zijn natuurlijk ontzettend trots! Kom vooral allemaal kijken om ze aan te moedigen! 
-Tickets: <a href="https://www.musisenstadstheater.nl/nl/agenda">https://www.musisenstadstheater.nl/nl/agenda</a>
-Wil je ook een bijdrage leveren? dat kan in de vorm van sponsoring of lieve hulp achter de schermen. 
-mail naar <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;">&#98;&#x61;&#98;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
+Onze leerlingen dansen <strong>zaterdag 14 juni</strong> in de grote leerlingen voorstelling in het Musis in Arnhem. </p>
+<p>We zijn natuurlijk ontzettend trots! Kom vooral allemaal kijken om ze aan te moedigen! 
+Tickets: <a href="https://www.musisenstadstheater.nl/nl/agenda">https://www.musisenstadstheater.nl/nl/agenda</a></p>
+<p>Wil je ook een bijdrage leveren? dat kan in de vorm van sponsoring of lieve hulp achter de schermen. 
+mail naar <a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
