--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Onze leerlingen dansen <strong>zaterdag 14 juni</strong> in de grote leerlingen 
 <p>We zijn natuurlijk ontzettend trots! Kom vooral allemaal kijken om ze aan te moedigen! </p>
 <p>Tickets: <a href="https://www.musisenstadstheater.nl/nl/agenda">https://www.musisenstadstheater.nl/nl/agenda</a></p>
 <p>Wil je ook een bijdrage leveren? dat kan in de vorm van sponsoring of lieve hulp achter de schermen. 
-mail naar <a href="mailto:&#98;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;</a> </p>
+mail naar <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
