Update from https://github.com/babsballetschool/website/commit/e74ee535b1a14556ad8f4a95a767cc74e293a07b

--- a/index.html
+++ b/index.html
@@ -37,25 +37,21 @@
 <p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p> Rooster seizoen 24-25:
+<p> Rooster seizoen 25/26 wordt z.s.m. bekend gemaakt.
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
-<p> Inschrijven voor seizoen 24-25:
+<p> Inschrijven voor seizoen 25-26:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
-Schrijf je nu in voor de laatste cursus Pilates van dit seizoen. (12 mei t/m 23 juni m.u.v. 9 juni). 
-Na de zomer starten we weer met een nieuwe cursus. </p>
+Schrijf je nu in voor de nieuwe cursus Pilates. (vanaf september 2025). </p>
 </section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
 <p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
-Onze leerlingen dansen <strong>zaterdag 14 juni</strong> in de grote leerlingen voorstelling in het Musis in Arnhem. </p>
-<p>We zijn natuurlijk ontzettend trots! Kom vooral allemaal kijken om ze aan te moedigen! </p>
-<p>Tickets: <a href="https://www.musisenstadstheater.nl/nl/agenda">https://www.musisenstadstheater.nl/nl/agenda</a></p>
-<p>Wil je ook een bijdrage leveren? dat kan in de vorm van sponsoring of lieve hulp achter de schermen. 
-mail naar <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
+Nog nagenieten van deze mooie voorstelling? Bestel de usb-film en foto&#39;s via <a href="https://vanessenproducties.nl/product/samen-door-babs-balletschool/">https://vanessenproducties.nl/product/samen-door-babs-balletschool/</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
