Update from https://github.com/babsballetschool/website/commit/dd6126bda5261deca2897d1e5fc9b55c32148f2f

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Rooster seizoen 25/26 wordt z.s.m. bekend gemaakt.
-<img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
-<a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
+<img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> </p>
 <p> Inschrijven voor seizoen 25-26:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
@@ -47,7 +46,7 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
-Schrijf je nu in voor de nieuwe cursus Pilates. (vanaf september 2025). </p>
+Schrijf je nu in voor de nieuwe lessen Pilates. (vanaf september 2025). </p>
 </section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
 <p><img src="resources/image/algemeen/SAMEN%202025.jpg" alt="dansvoorstelling SAMEN Babs Balletschool">
 Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
