Update from https://github.com/babsballetschool/website/commit/a644a83bfbf7af703537df3fc5c7db353290a58c

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -48,9 +48,10 @@
 <p><strong>2e les korting</strong> = 20%  op het laagste tarief</p>
 <p><strong>Studentenkorting</strong> = 20% (met kopie van de collegekaart)</p>
 <p>(er kan per leerling van 1 kortingsmogelijkheid gebruik worden gemaakt)</p>
+<p>De kortingen zijn niet van toepassing op de Korte Cursussen of Projecten</p>
 </section><section><h2 id="korte-cursusindien-aangeboden">Korte cursus.(indien aangeboden)</h2>
 <ul>
-<li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
+<li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings- of verdiepingscursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <table>
 <tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€95,-</td></tr>
@@ -58,11 +59,10 @@
 <tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€160 -</td></tr>
 </table>
 
-<p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
