Update from https://github.com/babsballetschool/website/commit/c340f8cb56a0550ae5389d48a7b202101afa2100

--- a/wanneer.html
+++ b/wanneer.html
@@ -34,40 +34,40 @@
         <main class="">
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanning--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanning:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p> <strong>dansrooster:</strong> vanaf 26 augustus 2024</p>
+<p> <strong>dansrooster:</strong> vanaf 25 augustus 2025</p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 <h1 id="jaarplanning"><strong>Jaarplanning:</strong></h1>
-<p><strong>opstart week</strong>             maandag 26 augustus 2024    </p>
-<p><strong>Open Dag</strong>                  zondag 1 september 2024<br>(Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music.) </p>
-<p><strong>Paardenmarkt</strong>              maandag 2 september 2024
+<p><strong>1e lesweek</strong>                maandag 25 augustus 2025   </p>
+<p><strong>Open Dag</strong>                  zondag 31 augustus 2025<br>(Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music.) </p>
+<p><strong>Paardenmarkt</strong>              maandag 1 september 2025
 (er zijn die dag geen lessen) </p>
-<p><strong>Sjors Sportief week</strong>       9 t/m 13 september  2024
+<p><strong>Sjors Sportief week</strong>       4 t/m 11 september  2025
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
-<p><strong>Vriendenlessen</strong>             14 t/m 18 oktober 
+<p><strong>Vriendenlessen</strong>             6 t/m 10 oktober 2025
 leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
-<p><strong>Herfstvakantie</strong>            21 t/m 25 oktober 2024
+<p><strong>Herfstvakantie</strong>             13 t/m 17 oktober 2025
 (in de vakantie zijn er geen lessen)</p>
-<p> <strong>Kijk-lessen</strong>              18 t/m 22 november
+<p> <strong>Kijk-lessen</strong>              24 t/m 28 november2025
 (familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>Pakjesavond</strong>                 5 december 2024
+<p><strong>Pakjesavond</strong>                 5 december 2025
 (vanaf 18:00 vervallen de lessen) </p>
-<p><strong>Kerstvakantie</strong>               23 december 2024 t/m 3 januari 2025<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Verkleed lessen</strong>             24 t/ 28 februari 2025<br>(Kom verkleed naar de lessen deze week!)</p>
-<p><strong>Carnavalsvakantie</strong>          3 t/m 7 maart 2025<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Vriendenlessen</strong>             nog onbekend
+<p><strong>Kerstvakantie</strong>               22 december 2025 t/m 2 januari 2026<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Verkleed lessen</strong>             9 t/m 13 februari 2026<br>(Kom verkleed naar de lessen deze week!)</p>
+<p><strong>Carnavalsvakantie</strong>           16 t/m 20 februari 2026<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Vriendenlessen</strong>             23 t/m 27 maart 2026
 leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
-<p><strong>Paasvakantie</strong>                21 april t/m 2 mei 2025<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Hemelvaart</strong>                 donderdag 29 &amp; vrijdag 30 mei 2025
+<p><strong>2e Paasdag</strong>                 maandag 6 april 2026<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Mei-vakantie</strong><br>(let op deze data kunnen anders zijn dan in het onderwijs) </p>
+<p><strong>Hemelvaart</strong>                  donderdag 14 &amp; vrijdag 15 mei 2026
 (er zijn dan geen lessen) </p>
-<p><strong>2e Pinksterdag</strong>              maandag 9 juni 2025
+<p><strong>2e Pinksterdag</strong>               maandag mei 2026
 (dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Generale repetitie</strong>         dinsdag 10 juni 2025<br> (va 15:00)</p>
-<p><strong>Voorstelling in Musis Sacrum Arnhem</strong>  zaterdag 14 juni 2025
-(hele dag) </p>
-<p><strong>Orientatie week</strong>              16 juni t/m 20 juni 2025<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p> <strong>Diploma lessen</strong>               23 juni t/m 27 juni 2025<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
-<p><strong>Zomervakantie</strong>                vanaf 30 juni 2025<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Optreden Elst</strong>                weekeinden 6/7 &amp; 13/14 juni 2026
+(welke groepen dit mogen gaan doen wordt nog bekend gemaakt) </p>
+<p><strong>Orientatie week</strong>              15 juni t/m 19 juni 2026<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+<p> <strong>Diploma lessen</strong>               22 juni t/m 26 juni 2026<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p><strong>Zomervakantie</strong>                vanaf dinsdag 30 juni 2026<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
 </section>
