Update from https://github.com/babsballetschool/website/commit/81d438e68f4c56f203b3ce157a1826500f7dbdc6

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
