--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p> Rooster seizoen 25/26 wordt z.s.m. bekend gemaakt.
+<p> Rooster seizoen 25/26 wordt <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> </p>
 <p> Inschrijven voor seizoen 25-26:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
