--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#x61;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;</a></p>
 </section>
         </main>
         <footer>
