--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p> Rooster seizoen 25/26 [Rooster 25/26]<iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>)
+<p> Rooster seizoen 25/26 
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2025-2026 bij Babs Balletschool"> <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
 <p> Inschrijven voor seizoen 25-26:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
 <p><img src="templates/resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
