Update from https://github.com/babsballetschool/website/commit/0f83547347134c4a0ae90266374a0fc564ec6411

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <p> Inschrijven voor seizoen 25-26:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
-<p><img src="templates/resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
+<p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
