Update from https://github.com/babsballetschool/website/commit/9e182042a136f681c97f05a82d399f09ed504b44

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
