--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
