--- a/kleding.html
+++ b/kleding.html
@@ -141,7 +141,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
 </section><section><h1 id="winkels">winkels:</h1>
 <p><a href="https://www.dncstore.nl/">https://www.dncstore.nl/</a>
 <a href="https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s">https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s</a>
