--- a/hoeveel.html
+++ b/hoeveel.html
@@ -33,14 +33,17 @@
         </header>
         <main class="">
             <div class="where"><span>hoeveel</span></div>
-            <section><h1 id="tarieven-seizoen-2024---2025"><strong>Tarieven seizoen 2024 - 2025</strong></h1>
+            <section><h1 id="tarieven-seizoen-2025---2026"><strong>Tarieven seizoen 2025 - 2026</strong></h1>
 <p><img src="resources/image/algemeen/portemonnaie%20ballet.jpg" alt="dansplezier bij Babs Balletschool"></p>
-<h2 id="reguliere-lessen--volledig-dansseizoen-2024-2025-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2024-2025 zijn +/- 38 lessen)</h2>
+<h2 id="reguliere-lessen--volledig-dansseizoen-2025-2026-zijn-10-maanden---38-lessen">Reguliere lessen = volledig dansseizoen (2025-2026 zijn 10 maanden (+/- 38 lessen)</h2>
 <table>
-<tr><td>4 t/m 5 jaar:</td><td>€225,- per seizoen (45 min. 1 les per week)</td></tr>
-<tr><td>6 t/m 17 jaar:</td><td>€267,- per seizoen (60 min. 1 les per week)</td></tr>
-<tr><td>18 jaar en ouder:</td><td>€305,- per seizoen (60 min.1 les per week)</td></tr>
-<tr><td>extra Spitzen (15 min.):</td><td>€58,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>t/m 5 jaar:</td><td>  45 min. €230,- per jaar - €23,-  per maand</td></tr>
+<tr><td>t/m 17 jaar:</td><td> 60 min. €277,- per jaar - €27,70 per maand</td></tr>
+<tr><td>t/m 17 jaar:</td><td> 75 min. €285,- per jaar - €28,50 per maand</td></tr>
+<tr><td>v.a.18 jaar:</td><td> 60 min  €315,- per jaar - €31,50 per maand </td></tr>
+<tr><td>v.a.18 jaar:</td><td> 75 min  €325,- per jaar - €32,50 per maand </td></tr>
+<tr><td>Pilates:</td><td>     60 min  €331,- per jaar - €33,10 per maand </td></tr>
+<tr><td>extra Spitzen:</td><td> 15 min. €60,- per jaar - €6,- per maand.(aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
@@ -54,15 +57,15 @@
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings- of verdiepingscursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <table>
-<tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€95,-</td></tr>
-<tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€109,-</td></tr>
-<tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€160 -</td></tr>
+<tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€105,-</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€120,-</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€170,- -</td></tr>
 </table>
 
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
