Update from https://github.com/babsballetschool/website/commit/b55ea7c522d5ebe9051f3d27e31665ffb888af63

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
@@ -58,7 +58,7 @@ Nog nagenieten van deze mooie voorstelling? Bestel de usb-film en foto&#39;s via
 </section><section><h1 id="nieuwe-danskleding">Nieuwe danskleding</h1>
 <p><img src="resources/image/algemeen/Poster%20Twinkeltje.pdf" alt="Twinkeltje"> 
 Kijk voor je gaat shoppen even naar de kleding voorschriften!
-<a href="contents/_kleding/stories.dashes">Kleding</a>
+<a href="https://www.babsballetschool.nl/kleding.html">Kleding</a>
 Ik heb ook veel roze balletpakjes, jazzballetschoenen, ballet accessoires en 2e hands balletkleding te koop. Half september kom ik weer langs met &#39;Twinkeltje&#39;.</p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
