Update from https://github.com/babsballetschool/website/commit/31e65ddde1bb9e288b669ac9fad45228b3a55721

--- a/kleding.html
+++ b/kleding.html
@@ -42,6 +42,7 @@
 <li>Vestjes e.d. mogen in overleg</li>
 <li>Draag geen sieraden tijdens de les</li>
 <li>Kauwgom is te allen tijde verboden</li>
+<li>Gelieve geen anti-slip sokken te dragen in de les.</li>
 </ul>
 </section><section><h1 id="peuterdans--2-4-jaar-p1">Peuterdans ( 2-4 jaar P1)</h1>
 <p><img src="resources/image/algemeen/peuterdans%201.jpg" alt="Kleding voorschrift Babs Balletschool"></p>
@@ -141,7 +142,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="winkels">winkels:</h1>
 <p><a href="https://www.dncstore.nl/">https://www.dncstore.nl/</a>
 <a href="https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s">https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s</a>
