--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
