--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-50">Ballet 50+</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#101;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
@@ -56,7 +56,7 @@ Schrijf je nu in voor de nieuwe lessen Pilates. (vanaf september 2025). </p>
 Het was een succes en de leerlingen hebben staan stralen! We zijn ontzettend trots. 
 Nog nagenieten van deze mooie voorstelling? Bestel de usb-film en foto&#39;s via <a href="https://vanessenproducties.nl/product/samen-door-babs-balletschool/">https://vanessenproducties.nl/product/samen-door-babs-balletschool/</a></p>
 </section><section><h1 id="nieuwe-danskleding">Nieuwe danskleding</h1>
-<p><img src="resources/image/algemeen/Poster%20Twinkeltje.pdf" alt="Twinkeltje"> 
+<p><img src="templates/resources/image/algemeen/Poster%20Twinkeltje.pdf" alt="Twinkeltje"> 
 Kijk voor je gaat shoppen even naar de kleding voorschriften!
 <a href="https://www.babsballetschool.nl/kleding.html">Kleding</a>
 Ik heb ook veel roze balletpakjes, jazzballetschoenen, ballet accessoires en 2e hands balletkleding te koop. Half september kom ik weer langs met &#39;Twinkeltje&#39;.</p>
