Update from https://github.com/babsballetschool/website/commit/fb8770d78f0b7f9fd25c3b4b14a0c67182734d81

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -42,7 +42,9 @@
 <tr><td>t/m 17 jaar:</td><td> 75 min. €285,- per jaar - €28,50 per maand</td></tr>
 <tr><td>v.a.18 jaar:</td><td> 60 min  €315,- per jaar - €31,50 per maand </td></tr>
 <tr><td>v.a.18 jaar:</td><td> 75 min  €325,- per jaar - €32,50 per maand </td></tr>
+
 <tr><td>Pilates:</td><td>     60 min  €331,- per jaar - €33,10 per maand </td></tr>
+
 <tr><td>extra Spitzen:</td><td> 15 min. €60,- per jaar - €6,- per maand.(aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
@@ -65,7 +67,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;</a> 
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#108;</a> 
 Babs Balletschool is ook deelnemer aan de Gelrepas:  <a href="https://www.gelrepas.nl/aanbod/5000-babs-balletschool">https://www.gelrepas.nl/aanbod/5000-babs-balletschool</a></p>
 </section>
         </main>
