--- a/kleding.html
+++ b/kleding.html
@@ -142,7 +142,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#64;&#x62;&#x61;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
 </section><section><h1 id="winkels">winkels:</h1>
 <p><a href="https://www.dncstore.nl/">https://www.dncstore.nl/</a>
 <a href="https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s">https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s</a>
