Update from https://github.com/babsballetschool/website/commit/a52f7c72f541718b365665e8a94553fec2b3ded7

--- a/wanneer.html
+++ b/wanneer.html
@@ -63,31 +63,32 @@ leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe
 <p><strong>Kerstvakantie</strong>
                22 december 2025 t/m 2 januari 2026<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Verkleed lessen</strong>
-             9 t/m 13 februari 2026<br>(Kom verkleed naar de lessen deze week!)</p>
+                9 t/m 13 februari 2026<br>(Kom verkleed naar de lessen deze week!)</p>
 <p><strong>Carnavalsvakantie</strong>
-           16 t/m 20 februari 2026<br>(in de vakantie zijn er geen lessen)</p>
+               16 t/m 20 februari 2026<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Vriendenlessen</strong>
-             23 t/m 27 maart 2026
+                23 t/m 27 maart 2026
 leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
 <p><strong>2e Paasdag</strong>
                  maandag 6 april 2026<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Mei-vakantie</strong></p>
+<p><strong>Mei-vakantie</strong>
+                 20 april t/m 1 mei 2026</p>
 <p>(let op deze data kunnen anders zijn dan in het onderwijs) </p>
 <p><strong>Hemelvaart</strong>
                   donderdag 14 &amp; vrijdag 15 mei 2026
 (er zijn dan geen lessen) </p>
 <p><strong>2e Pinksterdag</strong>
-               maandag mei 2026
+                 maandag mei 2026
 (dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Optreden Elst</strong>
-                weekeinden 6/7 &amp; 13/14 juni 2026
+                  weekeinden 6/7 &amp; 13/14 juni 2026
 (welke groepen dit mogen gaan doen wordt nog bekend gemaakt) </p>
 <p><strong>Orientatie week</strong>
-              15 juni t/m 19 juni 2026<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+                  15 juni t/m 19 juni 2026<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
 <p> <strong>Diploma lessen</strong>
-               22 juni t/m 26 juni 2026<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+                 22 juni t/m 26 juni 2026<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
 <p><strong>Zomervakantie</strong>
-                vanaf dinsdag 30 juni 2026<br>(in de vakantie zijn er geen lessen)</p>
+                  vanaf dinsdag 30 juni 2026<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
 </section>
