--- a/jazz.html
+++ b/jazz.html
@@ -39,7 +39,7 @@
 Instromen is zeker nog mogelijk. </p>
 <p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
  De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
-<p>Vraag een proefles aan via mailto:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a></p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a></p>
 </section>
         </main>
         <footer>
