Update from https://github.com/babsballetschool/website/commit/a88b12bd544f3a7e8d7b20f2ca980f70574ea919

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="paardenmarkt-elst">Paardenmarkt Elst</h1>
 <p>Dit jaar gaan onze lessen tijdens de paardenmarkt (maandag 1 september) gewoon door! </p>
-</section><section><h1 id="ballet-50">Ballet 50+</h1>
+</section><section><h1 id="ballet-volwassenen-intermediate">Ballet volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
-Op maandagochtend starten we een korte cursus ballet voor 50+, dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a></p>
+Op maandagochtend starten we een korte cursus ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#108;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#108;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
