Update from https://github.com/babsballetschool/website/commit/ee16ba119f8b61da83a843602346aa2fea664b8b

--- a/kleding.html
+++ b/kleding.html
@@ -142,7 +142,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#108;">&#98;&#97;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="winkels">winkels:</h1>
 <p><a href="https://www.dncstore.nl/">https://www.dncstore.nl/</a>
 <a href="https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s">https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s</a>
