Update from https://github.com/babsballetschool/website/commit/e0a3c0ef6b7733e6a4db76afe0871c515d850ce7

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 </section><section><h1 id="ballet-volwassenen-intermediate">Ballet volwassenen Intermediate</h1>
 <p><img src="resources/image/Sprong.png" alt="dansplezier bij Babs Balletschool"> 
 Op maandagochtend starten we een nieuwe les ballet voor volwassenen,  dit is een les voor dansers met al eerdere balletervaring. 
-Aanmelden kan via de mail: <a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
+Aanmelden kan via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a></p>
 </section><section><h1 id="ballet-beginners-15">Ballet beginners 15+</h1>
 <p><img src="resources/image/algemeen/KLassiekballettieners.jpg" alt="Ballet tieners bij Babs Balletschool"> 
 Voor dansers die altijd al ballet hebben willen leren, of hun danstechniek willen versterken met een klassieke basis. 
-Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a></p>
+Start vanaf 1 september 16:45. Proefles is gratis. Aanmelden via de mail: <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a></p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
@@ -62,7 +62,7 @@ Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
 Schrijf je nu in voor de nieuwe lessen Pilates. (vanaf september 2025). </p>
 </section><section><h1 id="nieuwe-danskleding">Nieuwe danskleding</h1>
-<p><img src="templates/resources/image/algemeen/Twinkeltje.jpg" alt="Twinkeltje"> 
+<p><img src="resources/image/algemeen/Twinkeltje.jpg" alt="Twinkeltje"> 
 Kijk voor je gaat shoppen even naar de kleding voorschriften!
 <a href="https://www.babsballetschool.nl/kleding.html">Kleding</a>
 Ik heb ook veel roze balletpakjes, jazzballetschoenen, ballet accessoires en 2e hands balletkleding te koop. Half september kom ik weer langs met &#39;Twinkeltje&#39;.</p>
